# OC-Projet7

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
code/notebooks/: API_try1.ipynb  evidently.ipynb  nb_credit_risk_classification.ipynb  nb_mlflow1.ipynb  nb_mlflow1_v2.ipynb  nb_mlflow1_v4.ipynb
code/noteboooks/: evidently.ipynb  nb_begin.ipynb  nb_mlflow1.ipynb  nb_mlflow1_v2.ipynb  nb_mlflow1_v3.ipynb  nb_mlflow1_v4.ipynb  tes.ipynb  test.ipynb
code/scripts/: # template for the classes.py  brouil.py  model_class.py  test_request.py
models/pipelines/: preprocessor_top15.joblib
src/projet7/: API_creditrisk_LGBMmodel.py  API_try1.py  API_try2.py  class_model.py  data_preprocess.py  model_for_API_class.py
