[project]
authors = [{name = "Calixte Henry", email = "chckt316@etik.com"}]
dependencies = []
name = "Project7"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
project7 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
polars = ">=1.26.0,<2"
